Fix z-index header

--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -3,6 +3,7 @@ nav {
   padding: 1rem;
   top: 0;
   position: sticky;
+  z-index: 1000;
 }
 
 nav ul {
